--- a/index.css
+++ b/index.css
@@ -429,7 +429,7 @@ a:link, a:visited, a {
 
     display: grid;
     grid-template-columns: repeat(3, 0.3fr);
-    grid-template-rows: repeat(2, 230px);
+    grid-template-rows: 250px 250px;
     grid-column-gap: 50px;
     justify-content: center;
     padding: 50px;
