--- a/breakpoints.css
+++ b/breakpoints.css
@@ -1,5 +1,8 @@
 
+
 @media (max-width: 1024px) {
+
+    
 
 
 .inicio {
@@ -202,9 +205,13 @@ a:link, a:visited, a {
 /* NAV MUSIC */
 
     .stream {
-        margin: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: 0px;
+        margin-right: 0px;
         width: 300px;
         text-align: center;
+        padding: 0px;
         
     }
     .stream2  {
@@ -260,7 +267,7 @@ padding: 0px;
 .news {
     
     display: grid;
-    grid-template-columns: 350px;
+    grid-template-columns: 310px;
     grid-template-rows: repeat(6, 1fr);
     padding: 5px;
 
@@ -272,10 +279,17 @@ padding: 0px;
 .news11 {grid-column: 1/1; grid-row:2/2;}
 .news2 {grid-column: 1/1; grid-row:3/3; margin-top:10px;}
 .news22 {grid-column: 1/1;grid-row:4/4;}
-.news3 {grid-column: 1/1;grid-row:5/5;margin-top:10px;}
+.news3 {grid-column: 1/1;grid-row:5/5; margin-top:10px;}
 .news33 {grid-column: 1/1;grid-row:6/6;}
 
 .signup {
     text-align: center;
 }
+
+.logo1 { 
+    height: 120px;
 }
+}
+
+
+
