--- a/index.css
+++ b/index.css
@@ -215,6 +215,7 @@ a:link, a:visited, a {
     justify-content: space-evenly;
     align-items: center;
     padding: 0px;
+    margin: 0px;
 
 }
 
@@ -518,6 +519,10 @@ a:link, a:visited, a {
     margin: 0px;
 
 
+}
+
+.logo1 { 
+    height: 150px;
 }
 
 .signup {
