--- a/breakpoints.css
+++ b/breakpoints.css
@@ -2,8 +2,9 @@
 
 @media (max-width: 1024px) {
 
-    
-
+    .header { 
+        background-position: center;    
+    }
 
 .inicio {
     display: none;
