--- a/breakpoints.css
+++ b/breakpoints.css
@@ -16,7 +16,7 @@
 
 .logoblanco {
 
-    height: 120px; 
+    height: 150px; 
 
 }
 
@@ -210,7 +210,7 @@ a:link, a:visited, a {
         margin-bottom: 10px;
         margin-left: 0px;
         margin-right: 0px;
-        width: 290px;
+        width: 300px;
         text-align: center;
         padding: 0px;
         
@@ -268,7 +268,7 @@ padding: 0px;
 .news {
     
     display: grid;
-    grid-template-columns: 300px;
+    grid-template-columns: 320px;
     grid-template-rows: repeat(6, 1fr);
     padding: 0px;
     margin: 0px;
@@ -288,10 +288,44 @@ padding: 0px;
     text-align: center;
 }
 
-.logo1 { 
-    height: 120px;
-}
+
 }
 
 
 
+@media (max-width: 320px) {
+
+    .news {
+    
+        display: grid;
+        grid-template-columns: 300px;
+        grid-template-rows: repeat(6, 1fr);
+        padding: 0px;
+        margin: 0px;
+    
+        
+    
+    }
+
+    .logo1 { 
+        height: 120px;
+    }
+
+    
+    .logoblanco {
+
+    height: 120px; 
+
+    }
+
+    .stream {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 290px;
+    text-align: center;
+    padding: 0px;
+    
+    }
+}
